Merged PR 662: feat(gis-portal): add some packages/up java to 11 all
Related work items: #3407